# WaveyMicroHMIAutomotiveCockpit

./: .clang-format  .gitignore  .qmlformat.ini  CMakeLists.txt  LICENSE  README.md
applications/: CMakeLists.txt
applications/mediaplayer/: CMakeLists.txt  README.md
applications/mediaplayer/src/appcode/: CMakeLists.txt
applications/mediaplayer/src/appcode/com.spyrosoft.mediaplayer/: ClusterWindow.qml  GestureScreenWindow.qml  MainScreenWindow.qml  info.yaml  main.qml
applications/mediaplayer/src/middleware/: CMakeLists.txt
applications/mediaplayer/src/middleware/mediaplayer/: gestures.qface  mediaplayer.qface
applications/mediaplayer/src/middleware/mediaplayer/backend/: CMakeLists.txt
applications/mediaplayer/src/middleware/mediaplayer/frontend/: CMakeLists.txt
applications/mediaplayer/src/middleware/mediaplayer/imports/: CMakeLists.txt  plugin.cpp
applications/mediaplayer/src/middleware/mediaplayer/server/: CMakeLists.txt  mediaplayerimpl.cpp  mediaplayerimpl.h  mediaplayerserver.cpp  mediaplayerserver.h
applications/mediaplayer/src/testbed/: CMakeLists.txt  main.cpp
applications/navigation/: CMakeLists.txt  README.md
applications/navigation/src/appcode/: CMakeLists.txt
applications/navigation/src/appcode/com.spyrosoft.navigation/: info.yaml  main.qml
applications/navigation/src/middleware/: CMakeLists.txt
applications/navigation/src/middleware/navigation/: navigation.qface
applications/navigation/src/middleware/navigation/backend/: CMakeLists.txt
applications/navigation/src/middleware/navigation/frontend/: CMakeLists.txt  frontendex.yaml  routeadapter.cpp  routeadapter.h
applications/navigation/src/middleware/navigation/imports/: CMakeLists.txt  plugin.cpp
applications/navigation/src/middleware/navigation/server/: CMakeLists.txt  navigationimpl.cpp  navigationimpl.h  navigationserver.cpp  navigationserver.h
applications/navigation/src/testbed/: CMakeLists.txt  main.cpp
applications/navigation/src/testbed/testbedextras/: TestBedExtras.qml  qmldir
applications/radioplayer/: .gitignore  CMakeLists.txt  README.md
applications/radioplayer/src/appcode/: CMakeLists.txt
applications/radioplayer/src/appcode/com.spyrosoft.radioplayer/: info.yaml  main.qml
applications/radioplayer/src/middleware/: CMakeLists.txt
applications/radioplayer/src/middleware/radioplayer/: radioplayer.qface
applications/radioplayer/src/middleware/radioplayer/backend/: CMakeLists.txt
applications/radioplayer/src/middleware/radioplayer/frontend/: CMakeLists.txt
applications/radioplayer/src/middleware/radioplayer/imports/: CMakeLists.txt  plugin.cpp
applications/radioplayer/src/middleware/radioplayer/server/: CMakeLists.txt  radioplayerimpl.cpp  radioplayerimpl.h  radioplayerserver.cpp  radioplayerserver.h
applications/radioplayer/src/testbed/: CMakeLists.txt
applications/watch/: CMakeLists.txt  README.md
applications/watch/src/: CMakeLists.txt
applications/watch/src/appcode/: CMakeLists.txt
applications/watch/src/appcode/com.spyrosoft.watch/: info.yaml  main.qml
applications/watch/src/middleware/watch/: CMakeLists.txt  watch.qface
applications/watch/src/middleware/watch/backend/: CMakeLists.txt
applications/watch/src/middleware/watch/frontend/: CMakeLists.txt
applications/watch/src/middleware/watch/imports/: CMakeLists.txt  plugin.cpp
applications/watch/src/middleware/watch/server/: CMakeLists.txt  watchimpl.cpp  watchimpl.h  watchserver.cpp  watchserver.h
applications/watch/src/testbed/: CMakeLists.txt
applications/weather/: CMakeLists.txt  README.md
applications/weather/src/appcode/: CMakeLists.txt
applications/weather/src/appcode/com.spyrosoft.weather/: info.yaml  main.qml
applications/weather/src/middleware/: CMakeLists.txt
applications/weather/src/middleware/weather/: weather.qface
applications/weather/src/middleware/weather/backend/: CMakeLists.txt
applications/weather/src/middleware/weather/frontend/: CMakeLists.txt
applications/weather/src/middleware/weather/imports/: CMakeLists.txt  plugin.cpp
applications/weather/src/middleware/weather/server/: CMakeLists.txt  (+4 more)
applications/weather/src/testbed/: CMakeLists.txt  main.cpp
sharedui/WaveyStyle/: CMakeLists.txt  QQuickAttachedObject.cpp  QQuickAttachedObject.h  StyleLoader.cpp  StyleLoader.h  ThemeValues.h  WaveyFonts.cpp  WaveyFonts.h  WaveyStyle.cpp  WaveyStyle.h  style.conf
sharedui/WaveyStyle/common_components/: AppSlotBorderEffect.qml  BlurEffect.qml  BlurHelper.qml  DesaturationEffect.qml  PlayStop.qml  RoundedItem.qml
sharedui/WaveyStyle/common_shaders/: appSlotBorder.frag  desaturation.frag.qsb  roundedItem.frag
systemui/: .gitignore  CMakeLists.txt  README.md  uninstall_wavey_hw_apk.sh
systemui/config/: Dockerfile
systemui/manuals/: Deploy.md  Docker.md  Linux.md  Windows.md  macOS.md
systemui/src/: CMakeLists.txt
systemui/src/middleware/: CMakeLists.txt
systemui/src/middleware/sysuiipc/: CMakeLists.txt  sysuiipc.qface
systemui/src/middleware/sysuiipc/backend/: CMakeLists.txt
systemui/src/middleware/sysuiipc/frontend/: CMakeLists.txt  frontendex.yaml
systemui/src/middleware/sysuiipc/imports/: CMakeLists.txt
systemui/src/middleware/sysuiipc/server/: CMakeLists.txt  appslotsimpl.cpp  appslotsimpl.h  appslotsmodelimpl.cpp  appslotsmodelimpl.h  appstyleimpl.cpp  appstyleimpl.h  gesturedetectorimpl.cpp  gesturedetectorimpl.h  sysuiipcserver.cpp  sysuiipcserver.h
systemui/src/wavey-ivi/: .clang-tidy  CMakeLists.txt  qt.conf
systemui/src/wavey-ivi/android/: AndroidManifest.xml.in
systemui/src/wavey-ivi/assets/: wavey-common-config.yaml  wavey-gesture-config-android.yaml  wavey-gesture-config-desktop.yaml  wavey-main-config-android.yaml  wavey-main-config-desktop.yaml
systemui/src/wavey-ivi/assets/sysUI/: GestureScreenWindow.qml  MainScreenWindow.qml
systemui/src/wavey-ivi/impl/: main.cpp  presslistener.cpp  presslistener.h
systemui/src/wavey-ivi/mapdata/: mapdata.qrc
systemui/tests/: CMakeLists.txt
systemui/tests/QMLTests/: CMakeLists.txt  main.cpp
systemui/tests/QMLTests/testcases/: tst_GestureRecognizer.qml
(+235 files in other folders)
